# calendarific_api

./: .env.example  LICENSE  README.md  calendarific.py  challenge.txt  config.py  custom_exceptions.py  logger.py  parameters.py  pyproject.toml  tox.ini  utils.py
expected_result/: gb_7-7-1992_18-9-1992.txt  ua_7-7-1992_18-9-1992.txt  us_7-7-1992_18-9-1992.txt
output/: gb_7-7-1992_18-9-1992.txt  us_7-7-1992_18-9-1992.txt
tests/: test_client.py  test_parameters.py  test_utils.py
